--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,17 @@ body {
   background-color: red;
 }
 
+
+#buttons {
+  text-align: center;
+}
+
+#clear {
+
+}
 #container {
-  background-color: black;
+  border: 1px solid black;
+  background-color: #A6A6A6;
   height: 560px;
   width: 560px;
   position: absolute;
@@ -15,7 +24,7 @@ body {
 }
 
 .unit {
-  background-color: black;
+  background-color: #FFF;
   height: 35px;
   width: 35px;
   display:inline-block;
