--- a/css/styles.css
+++ b/css/styles.css
@@ -7,20 +7,26 @@ body {
   text-align: center;
 }
 
-#clear {
-
+.button {
+  font-family: Verdana;
+  font-size: 14pt;
+  margin: 10px 20px;
 }
+
+
 #container {
   border: 1px solid black;
-  background-color: #A6A6A6;
-  height: 560px;
-  width: 560px;
-  position: absolute;
+  background-color: #FFF;
+  height: 590px;
+  width: 590px;
+  position: relative;
   top:0;
   bottom: 0;
   left: 0;
   right: 0;
-  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 60px;
 }
 
 .unit {
